--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,9 +1,23 @@
-<h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
-<ul class="posts">
-    {% for post in page.posts %}
+---
+layout: default
+---
+
+<h1>Alles zu {{ page.title }}</h1>
+
+<ul class="post-list">
+    {%- for post in page.posts -%}
     <li>
-        <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-        <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        <span class="post-meta">{{ post.date | date: date_format }}</span>
+        <h3>
+            <a class="post-link" href="{{ post.url | relative_url }}">
+                {{ post.title | escape }}
+            </a>
+        </h3>
+        {%- if site.show_excerpts -%}
+        {{ post.excerpt }}
+        <a href="{{ post.url | relative_url }}">weiterlesen ...</a>
+        {%- endif -%}
     </li>
-    {% endfor %}
+    {%- endfor -%}
 </ul>
